// Vitest Snapshot v1

exports[`generateRouteRecord > adds children and name when folder and component exist 1`] = `
"[
  {
    path: \\"/a\\",
    name: \\"A\\",
    component: () => import('a.vue'),
    children: [
      {
        path: \\"c\\",
        name: \\"AC\\",
        component: () => import('a/c.vue'),
        /* no children */
      }
    ],
  },
  {
    path: \\"/b\\",
    /* no name */
    /* no component */
    children: [
      {
        path: \\"c\\",
        name: \\"BC\\",
        component: () => import('b/c.vue'),
        /* no children */
      }
    ],
  },
  {
    path: \\"/d\\",
    name: \\"D\\",
    component: () => import('d.vue'),
    /* no children */
  }
]"
`;

exports[`generateRouteRecord > correctly names index.vue files 1`] = `
"[
  {
    path: \\"/\\",
    name: \\"Root\\",
    component: () => import('index.vue'),
    /* no children */
  },
  {
    path: \\"/b\\",
    /* no name */
    /* no component */
    children: [
      {
        path: \\"\\",
        name: \\"B\\",
        component: () => import('b/index.vue'),
        /* no children */
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > names > creates single word names 1`] = `
"[
  {
    path: \\"/\\",
    name: \\"Root\\",
    component: () => import('index.vue'),
    /* no children */
  },
  {
    path: \\"/about\\",
    name: \\"About\\",
    component: () => import('about.vue'),
    /* no children */
  },
  {
    path: \\"/users\\",
    /* no name */
    /* no component */
    children: [
      {
        path: \\"\\",
        name: \\"Users\\",
        component: () => import('users/index.vue'),
        /* no children */
      },
      {
        path: \\":id\\",
        name: \\"Users$id\\",
        component: () => import('users/[id].vue'),
        children: [
          {
            path: \\"edit\\",
            name: \\"Users$idEdit\\",
            component: () => import('users/[id]/edit.vue'),
            /* no children */
          }
        ],
      },
      {
        path: \\"new\\",
        name: \\"UsersNew\\",
        component: () => import('users/new.vue'),
        /* no children */
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > names > works with nested views 1`] = `
"[
  {
    path: \\"/\\",
    name: \\"Root\\",
    component: () => import('index.vue'),
    /* no children */
  },
  {
    path: \\"/users\\",
    name: \\"UsersParent\\",
    component: () => import('users.vue'),
    children: [
      {
        path: \\"\\",
        name: \\"Users\\",
        component: () => import('users/index.vue'),
        /* no children */
      },
      {
        path: \\":id\\",
        name: \\"Users$id\\",
        component: () => import('users/[id].vue'),
        children: [
          {
            path: \\"edit\\",
            name: \\"Users$idEdit\\",
            component: () => import('users/[id]/edit.vue'),
            /* no children */
          }
        ],
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > nested children 1`] = `
"[
  {
    path: \\"/a\\",
    /* no name */
    /* no component */
    children: [
      {
        path: \\"a\\",
        name: \\"AA\\",
        component: () => import('a/a.vue'),
        /* no children */
      },
      {
        path: \\"b\\",
        name: \\"AB\\",
        component: () => import('a/b.vue'),
        /* no children */
      },
      {
        path: \\"c\\",
        name: \\"AC\\",
        component: () => import('a/c.vue'),
        /* no children */
      }
    ],
  },
  {
    path: \\"/b\\",
    /* no name */
    /* no component */
    children: [
      {
        path: \\"b\\",
        name: \\"BB\\",
        component: () => import('b/b.vue'),
        /* no children */
      },
      {
        path: \\"c\\",
        name: \\"BC\\",
        component: () => import('b/c.vue'),
        /* no children */
      },
      {
        path: \\"d\\",
        name: \\"BD\\",
        component: () => import('b/d.vue'),
        /* no children */
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > nested children 2`] = `
"[
  {
    path: \\"/a\\",
    /* no name */
    /* no component */
    children: [
      {
        path: \\"a\\",
        name: \\"AA\\",
        component: () => import('a/a.vue'),
        /* no children */
      },
      {
        path: \\"b\\",
        name: \\"AB\\",
        component: () => import('a/b.vue'),
        /* no children */
      },
      {
        path: \\"c\\",
        name: \\"AC\\",
        component: () => import('a/c.vue'),
        /* no children */
      }
    ],
  },
  {
    path: \\"/b\\",
    /* no name */
    /* no component */
    children: [
      {
        path: \\"b\\",
        name: \\"BB\\",
        component: () => import('b/b.vue'),
        /* no children */
      },
      {
        path: \\"c\\",
        name: \\"BC\\",
        component: () => import('b/c.vue'),
        /* no children */
      },
      {
        path: \\"d\\",
        name: \\"BD\\",
        component: () => import('b/d.vue'),
        /* no children */
      }
    ],
  },
  {
    path: \\"/c\\",
    name: \\"C\\",
    component: () => import('c.vue'),
    /* no children */
  },
  {
    path: \\"/d\\",
    name: \\"D\\",
    component: () => import('d.vue'),
    /* no children */
  }
]"
`;

exports[`generateRouteRecord > works with some paths at root 1`] = `
"[
  {
    path: \\"/a\\",
    name: \\"A\\",
    component: () => import('a.vue'),
    /* no children */
  },
  {
    path: \\"/b\\",
    name: \\"B\\",
    component: () => import('b.vue'),
    /* no children */
  },
  {
    path: \\"/c\\",
    name: \\"C\\",
    component: () => import('c.vue'),
    /* no children */
  }
]"
`;
